--- a/css/main.css
+++ b/css/main.css
@@ -299,11 +299,11 @@ body::-webkit-scrollbar-thumb {
   font-weight: 600;
 }
 
-.banner.career-page-image{
-  background: url("https://i.ibb.co/6mMXKGX/austin-chan-ukz-Hlkoz1-IE-unsplash-3.jpg") rgba(3, 3, 3, 0.253);
+.career-page-image{
+  background: url("https://i.ibb.co/SNyJ6bW/priscilla-du-preez-AOd-ELn6sen-M-unsplash-1.jpg") rgba(3, 3, 3, 0.253);
 }
 
-.banner.contribute-page-image{
+.contribute-page-image{
   background: url("https://i.ibb.co/SNyJ6bW/priscilla-du-preez-AOd-ELn6sen-M-unsplash-1.jpg") rgba(3, 3, 3, 0.253);
 }
 
