--- a/css/variables.css
+++ b/css/variables.css
@@ -7,8 +7,7 @@
   --card-bgc: #04070aa1;
   --footer-bgc: #04070a;
   --main-color: #d3dce6;
-  --footer-color: #6e7985;
-  --footer-color: #6987a7;
+  --footer-color: #f0f1f1;
 
   /* dimensions */
   --nav-height: 60px;
