--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,6 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-
 /** Links in paragraphs */
 .paragraph-links {
   border-bottom: 1px solid currentColor;
@@ -333,6 +332,14 @@ main {
   background-color: var(--main-bgc);
   padding: 10px;
   border-radius: 10px;
+}
+
+/** contribute page */
+.contributing-list {
+  list-style-type: disc;
+  /* list-style-position: inside; */
+  margin-left: 30px;
+  margin-bottom: 10px;
 }
 
 /** footer */
