formatted the codes and changed the footer bgcolor.

--- a/css/variables.css
+++ b/css/variables.css
@@ -5,7 +5,7 @@
   --main-bgc: #21394f;
   --nav-bgc: #04070acc;
   --card-bgc: #04070aa1;
-  --footer-bgc: #04070a;
+  --footer-bgc: hsl(210, 43%, 13%);
   --main-color: #d3dce6;
   --footer-color: #f0f1f1;
 
