--- a/src/css/main.css
+++ b/src/css/main.css
@@ -281,7 +281,14 @@ body::-webkit-scrollbar-thumb {
 
 /** Links in paragraphs */
 .paragraph-links {
-  border-bottom: 1px solid currentColor;
+  border-bottom: 1px solid var(--red);
+}
+
+.paragraph-links.footer {
+  border-bottom: 1px solid var(--purple);
+}
+.heading {
+  color: #ddd;
 }
 
 /** main */
@@ -315,6 +322,25 @@ main {
   text-align: center;
   background-color: var(--card-bgc);
   border-radius: 10px;
+  box-shadow: 0px 0px 1px 4px var(--card-bgc);
+}
+.pink {
+  border: 2px solid var(--pink);
+}
+.green {
+  border: 2px solid var(--green);
+}
+.red {
+  border: 2px solid var(--red);
+}
+.orange {
+  border: 2px solid var(--orange);
+}
+.purple {
+  border: 2px solid var(--purple);
+}
+.grey {
+  border: 2px solid var(--grey);
 }
 
 .careers__card-link.disabled {
