--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,12 +2,12 @@
 /** root file */
 :root {
   /** variables */
-  --main-bgc: #21394f;
-  --nav-bgc: #04070acc;
-  --card-bgc: #04070aa1;
+  --main-bgc: hsl(209, 41%, 22%);
+  --nav-bgc: hsla(210, 43%, 3%, 0.8);
+  --card-bgc: hsla(210, 43%, 3%, 0.631);
   --footer-bgc: hsl(210, 43%, 13%);
-  --main-color: #d3dce6;
-  --footer-color: #f0f1f1;
+  --main-color: hsl(212, 28%, 86%);
+  --footer-color: hsl(180, 3%, 94%);
 
   /* dimensions */
   --nav-height: 60px;
@@ -16,7 +16,7 @@
   --pink: hsl(350, 89%, 74%);
   --green: hsl(120, 50%, 50%);
   --red: hsl(0, 50%, 50%);
-  --orange: orange;
+  --orange: hsl(39, 100%, 50%);
   --purple: hsl(271, 46%, 53%);
   --grey: hsl(0, 0%, 87%);
 }
