--- a/src/css/main.css
+++ b/src/css/main.css
@@ -368,9 +368,19 @@ main {
 /** contribute page */
 .contributing-list {
   list-style-type: disc;
-  /* list-style-position: inside; */
   margin-left: 30px;
   margin-bottom: 10px;
+}
+
+.mvp-list {
+  list-style-type: decimal;
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
+.mvp .link {
+  /* margin-left: 5px; */
+  transform: rotateZ(-45deg);
 }
 
 /** footer */
